--- a/somnium_backend/docker-compose.yml
+++ b/somnium_backend/docker-compose.yml
@@ -7,9 +7,9 @@ services:
     container_name: somnium_postgres
     restart: unless-stopped
     environment:
-      POSTGRES_USER: somnium
-      POSTGRES_PASSWORD: somnium_password
-      POSTGRES_DB: somnium_db
+      POSTGRES_USER: ${POSTGRES_USER:-somnium}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}  # REQUIRED: Set in .env file
+      POSTGRES_DB: ${POSTGRES_DB:-somnium_db}
       PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5432:5432"
@@ -33,10 +33,16 @@ services:
     ports:
       - "8000:8000"
     environment:
-      - DATABASE_URL=postgresql+asyncpg://somnium:somnium_password@db:5432/somnium_db
-      - SECRET_KEY=your-super-secret-key-change-in-production-min-32-characters-long
-      - DEBUG=True
-      - CORS_ORIGINS=["http://localhost:3000","http://localhost:5173"]
+      # Override DATABASE_URL to use 'db' service name instead of 'localhost'
+      - DATABASE_URL=postgresql+asyncpg://${POSTGRES_USER:-somnium}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB:-somnium_db}
+      - SECRET_KEY=${SECRET_KEY}  # REQUIRED: Set in .env file (min 32 chars)
+      - DEBUG=${DEBUG:-False}  # Default to False for security
+      - CORS_ORIGINS=${CORS_ORIGINS:-["http://localhost:3000"]}
+      - OPENAI_API_KEY=${OPENAI_API_KEY:-}
+      - QDRANT_HOST=qdrant
+      - QDRANT_PORT=6333
+      - ACCESS_TOKEN_EXPIRE_MINUTES=${ACCESS_TOKEN_EXPIRE_MINUTES:-15}
+      - REFRESH_TOKEN_EXPIRE_DAYS=${REFRESH_TOKEN_EXPIRE_DAYS:-7}
     depends_on:
       db:
         condition: service_healthy
