--- a/somnium-frontend/package.json
+++ b/somnium-frontend/package.json
@@ -23,10 +23,13 @@
     "@trpc/next": "^11.0.0",
     "@trpc/react-query": "^11.0.0",
     "@trpc/server": "^11.0.0",
+    "@types/dompurify": "^3.0.5",
     "autoprefixer": "^10.4.23",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "dompurify": "^3.3.1",
+    "eventsource": "^4.1.0",
     "immer": "^11.1.3",
     "lucide-react": "^0.468.0",
     "next": "^15.1.3",
