--- a/somnium_backend/pyproject.toml
+++ b/somnium_backend/pyproject.toml
@@ -8,16 +8,23 @@ dependencies = [
     "alembic>=1.17.2",
     "asyncpg>=0.31.0",
     "fastapi>=0.128.0",
+    "fastapi-csrf-protect>=1.0.7",
+    "imbalanced-learn>=0.11.0",
+    "joblib>=1.3.0",
+    "numba>=0.59.0",
+    "numpy>=1.26.0",
+    "pandas>=2.2.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic-settings>=2.12.0",
     "pydantic[email]>=2.12.5",
     "python-jose[cryptography]>=3.5.0",
     "python-multipart>=0.0.21",
+    "scikit-learn>=1.4.0",
+    "scipy>=1.11.0",
+    "shap>=0.46.0",
+    "slowapi>=0.1.9",
     "sqlalchemy[asyncio]>=2.0.45",
     "sse-starlette>=3.1.1",
-    "torch>=2.9.1",
-    "torchaudio>=2.9.1",
-    "torchvision>=0.24.1",
     "uvicorn[standard]>=0.40.0",
 ]
 
